# vanbutler

./: .env.sample  .gitignore  LICENSE  README.md  alembic.ini  config.py  database.py  main.py  models.py  pyproject.toml  requirements.txt
.github/workflows/: daily_evening_trigger.yml
alembic/: README  env.py
alembic/versions/: 20260428_0001_initial_schema.py  20260429_0002_meals_slot_meal_ids_jsonb.py  20260430_0003_meal_slot_value_checks.py  20260430_0004_meals_meal_prep_created_at.py  20260501_0005_messages_status_chat_wa_type_metadata.py  20260508_0006_llm_logs.py  20260518_0007_trivia.py  20260520_0008_system_meals_skip_cook.py  20260522_0009_cook_holiday.py
llm/: __init__.py  llm_service.py  prompts.py
meal_planning/: __init__.py  dates.py  match.py  meal_options.py  orchestration.py  query.py
messages_service/: __init__.py  debounce.py  helpers.py  message_service.py
messages_service/intent/: __init__.py  conversation.py  cook_absence.py  handlers.py  intent_service.py
scripts/: add_trivia.py  clear_data_for_today.py  import_vanbutler_meals.py  import_vanbutler_trivia.py  run_daily_evening_trigger.py  seed_meals.py  seed_trivia.py  send_slot_options.py  send_trivia_greeting.py
trivia/: __init__.py  matching.py  semanticals.csv  vanbutler_trivia.csv
