[project]
name = "vanbutler"
version = "0.1.0"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-dotenv",
    "requests",
    "psycopg[binary]>=3.1",
    "sqlalchemy>=2.0.33",
    "alembic>=1.13",
    "google-genai>=1.0.0",
    "groq>=0.11.0",
    "rapidfuzz>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.0",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
